# sequencerTradingPlatform

./: CMakeLists.txt  README.md  base_exchange_simulator.hpp  base_market_generator.hpp  comprehensive_risk_manager.hpp  connection_manager.hpp  crypto_config.hpp  enhanced_risk_manager.hpp  exchange_simulator.hpp  feed_handler.hpp  high_speed_simulator.cpp  infrastructure_simulator.hpp  logger.hpp  main.cpp  market_data_generator.hpp  messages.hpp  monitoring_integration.hpp  network_simulator.hpp  position_tracker.hpp  real_time_monitor.hpp  ring_buffer.hpp  risk_system_demo.cpp  scenario_engine.hpp  seq_flow.mermaid  sequencer.hpp  session_manager.hpp  shared_types.hpp  simulation_controller.hpp  standalone_simulator.cpp  system_health_monitor.hpp  test_strategies.cpp  unified_risk_controller.hpp
config/: intraday_config.json
monitor/: monitoring_integration.hpp  real_time_monitor.hpp
risk/: comprehensive_risk_manager.hpp  enhanced_risk_manager.hpp  institutional_risk_manager.hpp  integrated_risk_hft_demo.cpp  risk_system_demo.cpp  unified_risk_controller.hpp
sim/: base_exchange_simulator.hpp  exchange_simulator.hpp  high_speed_simulator.cpp  infrastructure_simulator.hpp  network_simulator.hpp  simulation_controller.hpp  simulation_runner.cpp  standalone_simulator.cpp
strategies/: enhanced_feed_handler.hpp  intraday_risk_manager.hpp  intraday_strategies.hpp  performance_tracker.hpp  simple_executor.hpp  technical_indicators.hpp
